--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/postcss": "^4.0.6",
     "motion": "^12.4.2",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -19,7 +20,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/react": "^19.0.8",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6"
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6"
   }
 }
